[package]
name = "strymon_keepers"
version = "0.1.0"
authors = ["Anna Szybalska <annasz@student.ethz.ch>"]

[dependencies]
abomonation = "0.4"
abomonation_derive = "0.2"
futures = "0.1"
timely = "0.3.0"
tokio-core = "0.1"
log = "0.4"
env_logger = "0.5"
lazy_static = "1"
serde = "1"
serde_derive = "1"

[dependencies.strymon_communication]
path = "../strymon_communication"

[dependencies.strymon_rpc]
path = "../strymon_rpc"

[dependencies.strymon_runtime]
path = "../strymon_runtime"
